EXTRA_DIST = 
SUBDIRS = parameters intercmds
noinst_HEADERS = 
BUILT_SOURCES = parameter.h parameter_offset.h parametertype.hin parameter_offset.default intercmd.h intercmdtype.hin
CLEANFILES = $(BUILT_SOURCES)
parameter.h parameter_offset.h parametertype.hin parameter_offset.default intercmd.h intercmdtype.hin:
	./link.sh parameter $@

	
